--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -8,7 +8,7 @@
       <h2>Hello {{ user.first_name }} {{ user.last_name }}</h2>
       <h5><a href="{% url 'transaction:list_transaction' %}">Start managing transaction</a> or <a href="{% url 'management:list_product' %}">Update stocks</a></h5>
     {% else %}
-      <h2>Register or Login if you'd like to</h2>
+      <h2>Login if you'd like to</h2>
     {% endif %}
   </div>
 </div>
