--- a/transaction/templates/transaction/transaction_list.html
+++ b/transaction/templates/transaction/transaction_list.html
@@ -21,7 +21,8 @@
     </a>
   </div>
 
-  <div class="d-flex justify-content-end">
+  <div class="d-flex flex-column align-items-end mb-3">
+    <a class="btn btn-sm btn-outline-secondary" href="{% url 'transaction:export_transaction' %}{{ request_params }}">Export to CSV</a>
     Showing {{ page_obj.start_index }}-{{ page_obj.end_index }} of {{ paginator.object_list.count }} results
   </div>
 
