--- a/management/templates/management/marketplace_edit.html
+++ b/management/templates/management/marketplace_edit.html
@@ -24,26 +24,6 @@
 </div>
 
 <!-- Delete Confirmation Modal -->
-<div class="modal fade" id="deleteConfirmationModal" tabindex="-1" role="dialog" aria-labelledby="deleteConfirmationModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="deleteConfirmationModalLabel">Are you sure to delete this marketplace?</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        You cannot undo this action.
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">No, I change my mind</button>
-        <form method="post" action="{% url 'management:delete_marketplace' marketplace.id %}">
-          {% csrf_token %}
-          <button type="submit" class="btn btn-danger">Yes, delete it</button>
-        </form>
-      </div>
-    </div>
-  </div>
-</div>
+{% url 'management:delete_marketplace' marketplace.id as delete_url %}
+{% include 'delete_confirmation_modal.html' with modal_id='deleteConfirmationModal' object_name='marketplace' delete_url=delete_url %}
 {% endblock %}
