Add update_all_packed_status feature; Improve UX
- UX: shipping cost print to include Rp and thousand separators
- UX: transaction successful edit will return to previous search result&page

--- a/transaction/templates/transaction/transaction_edit.html
+++ b/transaction/templates/transaction/transaction_edit.html
@@ -12,7 +12,7 @@
   <div class="row">
     <h1>Edit Transaction</h1>
   </div>
-  <form method="post" action="{% url 'transaction:edit_transaction' transaction.id %}">
+  <form method="post" action="{% url 'transaction:edit_transaction' transaction.id %}{{ next_page_params }}">
     {% csrf_token %}
     {% include 'autocomplete_form.html' with form_group_col_class='col-6'%}
 
