Fix transaction delete error; Fix typo; Improve UX
- UX: transaction export&change_status will return to previous search result&page

--- a/transaction/templates/transaction/transaction_duplicate.html
+++ b/transaction/templates/transaction/transaction_duplicate.html
@@ -57,7 +57,7 @@
         </table>
       </div>
     {% else %}
-      <p>No transaction found with that criteria.</p>
+      <p>No transaction found with those criteria.</p>
     {% endif %}
   </div>
   {% if transaction %}
