--- a/transaction/templates/transaction/transaction_list.html
+++ b/transaction/templates/transaction/transaction_list.html
@@ -86,7 +86,7 @@
           </tbody>
         </table>
         {% if not transactions %}
-          <p>No transaction is found with that criteria.</p>
+          <p>No transaction is found with those criteria.</p>
         {% endif %}
       </div>
     </div>
