--- a/transaction/templates/transaction/transaction_list.html
+++ b/transaction/templates/transaction/transaction_list.html
@@ -98,23 +98,25 @@
 
   <!-- PAGINATOR -->
   <div class="row">
-    <nav aria-label="Transaction Pagination">
-      <ul class="pagination">
-        {% for page in page_obj.paginator.page_range %}
-          {% ifequal page page_obj.number %}
-          <li class="page-item active" aria-current="page">
-            <span class="page-link"> {{ page }}
-              <span class="sr-only">(current)</span>
-            </span>
-          </li>
-          {% else %}
-          <li class="page-item">
-            <a class="page-link" href="{{ request_params }}&page={{ page }}">{{ page }}</a>
-          </li>
-          {% endifequal %}
-        {% endfor %}
-      </ul>
-    </nav>
+    <div class="col">
+      <nav aria-label="Transaction Pagination">
+        <ul class="pagination flex-wrap">
+          {% for page in page_obj.paginator.page_range %}
+            {% ifequal page page_obj.number %}
+            <li class="page-item active" aria-current="page">
+              <span class="page-link"> {{ page }}
+                <span class="sr-only">(current)</span>
+              </span>
+            </li>
+            {% else %}
+            <li class="page-item">
+              <a class="page-link" href="{{ request_params }}&page={{ page }}">{{ page }}</a>
+            </li>
+            {% endifequal %}
+          {% endfor %}
+        </ul>
+      </nav>
+    </div>
   </div>
 
   <div class="row">
