--- a/management/templates/management/city_list.html
+++ b/management/templates/management/city_list.html
@@ -4,14 +4,34 @@
 {% block management_content %}
 <div class="container">
   <h1>City</h1>
-  <div class="row">
-    <ul>
-      {% for city in cities %}
-        <li><a href="{{ city.get_absolute_url }}">{{ city }}</a></li>
-      {% empty %}
-        <li>No recorded cities.</li>
-      {% endfor %}
-    </ul>
+  <div class="row pt-3">
+
+    <div class="row">
+      <div class="col">
+        <div class="table-responsive-xl">
+          <table class="table table-striped table-sm">
+            <thead class="thead-dark">
+              <tr>
+                <th class="col-number" scope="col">#</th>
+                <th class="col-name" scope="col">Name (Click to Edit)</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for city in cities %}
+              <tr>
+                <th class="col-number">{{ forloop.counter }}</th>
+                <td class="col-name"><a href="{{ city.get_absolute_url }}">{{ city }}</a></td>
+              </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+          {% if not cities %}
+            <p>No recorded cities.</p>
+          {% endif %}
+        </div>
+      </div>
+    </div>
+
   </div>
   <div class="row">
     <a class="btn btn-primary" href="{% url 'management:create_city' %}">
