--- a/management/templates/management/product_list.html
+++ b/management/templates/management/product_list.html
@@ -1,90 +1,69 @@
 {% extends 'management/base.html' %}
+{% load static %}
 {% load base_extras %}
 {% block title %} Product {% endblock %}
 {% block management_content %}
 <div class="container">
   <h1>Product</h1>
   <div class="row pt-3">
+    <div class="col">
 
-    <h2>All Products</h2>
-    <div class="row">
-      <div class="col">
-        <div class="table-responsive-xl">
-          <table class="table table-striped table-sm">
-            <thead class="thead-dark">
-              <tr>
-                <th class="col-number" scope="col">#</th>
-                <th class="col-complete-name" scope="col">Complete Name (Click to Edit)</th>
-                <th class="col-stock" scope="col">Stock</th>
-                <th class="col-code" scope="col">Code</th>
-                <th class="col-name" scope="col">Name</th>
-                <th class="col-color" scope="col">Color</th>
-                <th class="col-size" scope="col">Size</th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for product in products %}
-              <tr>
-                <th class="col-number">{{ forloop.counter }}</th>
-                <td class="col-complete-name"><a href="{{ product.get_absolute_url }}">{{ product }}</a></td>
-                <td class="col-stock">{{ product.stock }}</td>
-                <td class="col-code">{{ product.code }}</td>
-                <td class="col-name">{{ product.name }}</td>
-                <td class="col-color">{{ product.color }}</td>
-                <td class="col-size">{{ product.size }}</td>
-              </tr>
-              {% endfor %}
-            </tbody>
-          </table>
-          {% if not products %}
-            <p>No recorded products.</p>
-          {% endif %}
+      <div class="form-row mb-3">
+        <div class="col-sm-6">
+          <input id="search-product" class="form-control" type="text" placeholder="Search">
+        </div>
+        <div class="col-sm-6">
+          <input id="stock-less-than" class="form-control" type="number" placeholder="Stock Less Than">
         </div>
       </div>
-    </div>
-
-    <h2>Running Out Products</h2>
-    <div class="row">
-      <div class="col">
-        <div class="table-responsive-xl">
-          <table class="table table-striped table-sm">
-            <thead class="thead-dark">
-              <tr>
-                <th class="col-number" scope="col">#</th>
-                <th class="col-complete-name" scope="col">Complete Name (Click to Edit)</th>
-                <th class="col-stock" scope="col">Stock</th>
-                <th class="col-code" scope="col">Code</th>
-                <th class="col-name" scope="col">Name</th>
-                <th class="col-color" scope="col">Color</th>
-                <th class="col-size" scope="col">Size</th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for product in running_outs %}
-              <tr>
-                <th class="col-number">{{ forloop.counter }}</th>
-                <td class="col-complete-name"><a href="{{ product.get_absolute_url }}">{{ product }}</a></td>
-                <td class="col-stock">{{ product.stock }}</td>
-                <td class="col-code">{{ product.code }}</td>
-                <td class="col-name">{{ product.name }}</td>
-                <td class="col-color">{{ product.color }}</td>
-                <td class="col-size">{{ product.size }}</td>
-              </tr>
-              {% endfor %}
-            </tbody>
-          </table>
-          {% if not running_outs %}
-            <p>No recorded running out products.</p>
-          {% endif %}
+      <div class="row">
+        <div class="col">
+          <div class="table-responsive-xl">
+            <table class="table table-striped table-sm">
+              <thead class="thead-dark">
+                <tr>
+                  <th class="col-number" scope="col">#</th>
+                  <th class="col-complete-name" scope="col">Complete Name (Click to Edit)</th>
+                  <th class="col-stock" scope="col">Stock</th>
+                  <th class="col-code" scope="col">Code</th>
+                  <th class="col-name" scope="col">Name</th>
+                  <th class="col-color" scope="col">Color</th>
+                  <th class="col-size" scope="col">Size</th>
+                </tr>
+              </thead>
+              <tbody id="table-product-body">
+                {% for product in products %}
+                <tr>
+                  <th class="col-number">{{ forloop.counter }}</th>
+                  <td class="col-complete-name"><a href="{{ product.get_absolute_url }}">{{ product }}</a></td>
+                  <td class="col-stock">{{ product.stock }}</td>
+                  <td class="col-code">{{ product.code }}</td>
+                  <td class="col-name">{{ product.name }}</td>
+                  <td class="col-color">{{ product.color }}</td>
+                  <td class="col-size">{{ product.size }}</td>
+                </tr>
+                {% endfor %}
+              </tbody>
+            </table>
+            {% if not products %}
+              <p>No recorded products.</p>
+            {% endif %}
+          </div>
         </div>
       </div>
-    </div>
 
-  </div>
-  <div class="row">
-    <a class="btn btn-primary" href="{% url 'management:create_product' %}">
-      Add product
-    </a>
+      <div class="row">
+        <div class="col">
+          <a class="btn btn-primary" href="{% url 'management:create_product' %}">
+            Add product
+          </a>
+        </div>
+      </div>
+
+    </div>
   </div>
 </div>
+{% endblock %}
+{% block scripts %}
+<script src="{% static 'js/management/product_list.js' %}"></script>
 {% endblock %}
