--- a/transaction/templates/transaction/transaction_list.html
+++ b/transaction/templates/transaction/transaction_list.html
@@ -102,7 +102,7 @@
       <nav aria-label="Transaction Pagination">
         <ul class="pagination flex-wrap">
           {% for page in page_obj.paginator.page_range %}
-            {% ifequal page page_obj.number %}
+            {% if page == age_obj.number %}
             <li class="page-item active" aria-current="page">
               <span class="page-link"> {{ page }}
                 <span class="sr-only">(current)</span>
@@ -112,7 +112,7 @@
             <li class="page-item">
               <a class="page-link" href="{{ request_params }}&page={{ page }}">{{ page }}</a>
             </li>
-            {% endifequal %}
+            {% endif %}
           {% endfor %}
         </ul>
       </nav>
